# LurkBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README.zh.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.plugins/: README.md
.plugins/system-info-plugin/: __init__.py  plugin.json  system_info.py
.plugins/time-utils-plugin/: __init__.py  plugin.json  time_utils.py
.plugins/weather-plugin/: __init__.py  plugin.json  weather.py
docs/: DOCUMENTATION_ARCHITECTURE.md  README.md  index.md
docs/advanced/: cron.md  daemon.md  gateway.md  hooks.md  index.md  skills.md
docs/api/: PLUGIN_API.md  cli-reference.md  index.md
docs/deploy/: DEPLOYMENT_GUIDE.md
docs/design/: AGENT_ARCHITECTURE_DESIGN.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_DESIGN.zh.md  CHINA_ECOSYSTEM_GUIDE.md  COMPARISON_ANALYSIS.md  CONTEXT_AWARE_DESIGN.md  DYNAMIC_CONFIG_GUIDE.md  INTEGRATION_DESIGN.md  LURKBOT_COMPLETE_DESIGN.md  MOLTBOT_AGENT_ARCHITECTURE.md  MOLTBOT_ANALYSIS.md  MOLTBOT_ANALYSIS.zh.md  MOLTBOT_COMPLETE_ARCHITECTURE.md  MOLTBOT_REPLICATION_DESIGN.md  MONITORING_DESIGN.md  MULTI_TENANT_DESIGN.md  OPENCLAW_ALIGNMENT_PLAN.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM_DESIGN.md  PLUGIN_USER_GUIDE.md  POLICY_ENGINE_DESIGN.md  PROACTIVE_TASK_DESIGN.md  PROMPT_SYSTEM_COMPARISON.md  README.md  SKILL_LEARNING_DESIGN.md  TOOLS_VS_SKILLS_ANALYSIS.md
docs/dev/: NEXT_SESSION_GUIDE.md  PHASE1_SUMMARY.md  PHASE2_CHINA_ECOSYSTEM_REPORT.md  PHASE3_QUICK_REF.md  PHASE3_SECURITY_PLAN.md  PHASE3_SECURITY_REPORT.md  PHASE3_SUMMARY.md  PHASE4_PERFORMANCE_PLAN.md  PHASE4_TASK1_PERFORMANCE_BASELINE.md  PHASE4_TASK1_QUICK_REF.md  PHASE4_TASK2_1_QUICK_REF.md  PHASE4_TASK2_ASYNC_OPTIMIZATION.md  PHASE4_TASK2_ASYNC_QUICK_REF.md  PHASE4_TASK2_BATCHING_OPTIMIZATION.md  PHASE4_TASK2_CONNECTION_POOL_OPTIMIZATION.md  PHASE4_TASK2_CONNECTION_POOL_QUICK_REF.md  PHASE4_TASK2_JSON_OPTIMIZATION.md  PHASE4_TASK2_QUICK_REF.md  PHASE4_TASK3_CACHE_OPTIMIZATION.md  PHASE4_TASK3_CACHE_QUICK_REF.md  PHASE4_TASK4_MONITORING.md  PHASE5_ADVANCED_FEATURES_PLAN.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_QUICK_REF.md  PHASE7_SUMMARY.md  PHASE7_TASK3_QUICK_REF.md  PHASE8_FINAL_REPORT.md  PHASE8_PLAN.md  PHASE8_PROGRESS.md  PHASE8_QUICK_REF.md  PHASE8_SUMMARY.md  PHASE8_TASK3_FINAL_REPORT.md  PHASE8_TASK3_QUICK_REF.md  PHASE8_TASK3_SUMMARY.md  PHASE8_TASK4_SUMMARY.md  PHASE_2_SUMMARY.md  SESSION_2026-01-29_APPROVAL_SANDBOX.md  SESSION_2026-01-31_END.md  SESSION_2026-01-31_FINAL_SUMMARY.md  SESSION_2026-01-31_PHASE3A_SUMMARY.md  (+3 more)
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml.template
tests/: conftest.py  integration_test_tools.py  test_agent_types.py  test_approval.py  test_approval_integration.py  test_audit_log.py  test_bash_sandbox.py  test_bootstrap.py  test_browser_tool.py  test_builtin_tools.py  test_channels.py  test_cli.py  test_config.py  test_container_sandbox.py  test_context_integration.py  test_context_retrieval.py  test_context_storage.py  test_dingtalk_channel.py  test_doc_generator.py  test_encryption.py  test_feishu_channel.py  test_http_api.py  test_media_understanding.py  test_models_config.py  test_plugin_cli.py  test_plugin_communication.py  test_plugin_examples.py  test_plugin_exceptions.py  test_plugin_hot_reload.py  test_plugin_integration.py  test_plugin_manager.py  test_plugin_manager_integration.py  test_plugin_marketplace.py  test_plugin_models.py  test_plugin_orchestration.py  test_plugin_permissions.py  test_plugin_profiling.py  test_plugin_registry.py  test_plugin_runtime_integration.py  test_plugin_sandbox.py  (+16 more)
(+456 files in other folders)
